inference-app/rest-api-ii/deployment/resource-intensive-qfuzzy.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-intensive-qfuzzy
  labels:
    app: resource-intensive-qfuzzy
    algorithm: q-learning-fuzzy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-intensive-qfuzzy
  template:
    metadata:
      labels:
        app: resource-intensive-qfuzzy
        algorithm: q-learning-fuzzy
    spec:
      containers:
        - name: resource-intensive-qfuzzy
          image: ndraaa/resource-intensive-app-ii:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: resource-intensive-qfuzzy
  labels:
    app: resource-intensive-qfuzzy
    service: resource-intensive-qfuzzy
    algorithm: q-learning-fuzzy
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: resource-intensive-qfuzzy
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
